--- a/Intranet/Intranet.csproj
+++ b/Intranet/Intranet.csproj
@@ -123,6 +123,7 @@
     <Content Include="Content\Avisos\comunicado1 %28002%29.jpg" />
     <Content Include="Content\Avisos\Imagem1.png" />
     <Content Include="Content\Avisos\Mãos para o futuro %28002%29.jpg" />
+    <Content Include="Content\Banner\Banner dia do trabalhador_CV - compacto.jpg" />
     <Content Include="Content\Banner\Banner-Bamboo-1500x500-opt.jpg" />
     <Content Include="Content\Banner\banner-intranet.png" />
     <Content Include="Content\bootstrap-grid.css" />
