--- a/Intranet/Intranet.csproj
+++ b/Intranet/Intranet.csproj
@@ -157,6 +157,10 @@
     <Content Include="Content\Produtos\000000017638.png" />
     <Content Include="Content\Produtos\000000017639.png" />
     <Content Include="Content\Produtos\000000017640.png" />
+    <Content Include="Content\Produtos\000000017752.png" />
+    <Content Include="Content\Produtos\000000017784.png" />
+    <Content Include="Content\Produtos\000000017785.png" />
+    <Content Include="Content\Produtos\000000017794.png" />
     <Content Include="Content\Produtos\Imagem1.png" />
     <Content Include="Content\Produtos\Imagem2.png" />
     <Content Include="favicon.ico" />
