--- a/Intranet/Intranet.csproj
+++ b/Intranet/Intranet.csproj
@@ -166,6 +166,8 @@
     <Content Include="Content\Produtos\000000017784.png" />
     <Content Include="Content\Produtos\000000017785.png" />
     <Content Include="Content\Produtos\000000017794.png" />
+    <Content Include="Content\Produtos\000000017814.png" />
+    <Content Include="Content\Produtos\000000017815.png" />
     <Content Include="Content\Produtos\Imagem1.png" />
     <Content Include="Content\Produtos\Imagem2.png" />
     <Content Include="favicon.ico" />
