--- a/Intranet/Intranet.csproj
+++ b/Intranet/Intranet.csproj
@@ -128,6 +128,8 @@
     <Content Include="Content\Avisos\comunicado1 %28002%29.jpg" />
     <Content Include="Content\Avisos\Imagem1.png" />
     <Content Include="Content\Avisos\Mãos para o futuro %28002%29.jpg" />
+    <Content Include="Content\Banner\art-pictures-r1fa84ix5qhniulc.jpg" />
+    <Content Include="Content\Banner\Baner SIPATE.jpg" />
     <Content Include="Content\Banner\Banner dia do trabalhador_CV - compacto.jpg" />
     <Content Include="Content\Banner\Banner-Bamboo-1500x500-opt.jpg" />
     <Content Include="Content\Banner\banner-intranet.png" />
@@ -309,6 +311,7 @@
     <Content Include="Scripts\moment.min.js.map" />
     <Content Include="Scripts\moment-with-locales.min.js.map" />
     <Content Include="Views\AgendamentoReuniao\Index.cshtml" />
+    <Content Include="Views\Home\Jornal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
