--- a/Intranet/Intranet.csproj
+++ b/Intranet/Intranet.csproj
@@ -130,7 +130,9 @@
     <Content Include="Content\Avisos\Mãos para o futuro %28002%29.jpg" />
     <Content Include="Content\Banner\art-pictures-r1fa84ix5qhniulc.jpg" />
     <Content Include="Content\Banner\Baner SIPATE.jpg" />
+    <Content Include="Content\Banner\Banner - intranet %28Cereja%29.jpg" />
     <Content Include="Content\Banner\Banner dia do trabalhador_CV - compacto.jpg" />
+    <Content Include="Content\Banner\Banner institucional Soft Hair intranet.jpg" />
     <Content Include="Content\Banner\Banner-Bamboo-1500x500-opt.jpg" />
     <Content Include="Content\Banner\banner-intranet.png" />
     <Content Include="Content\bootstrap-grid.css" />
