--- a/Intranet/Intranet.csproj
+++ b/Intranet/Intranet.csproj
@@ -127,6 +127,7 @@
     <Content Include="Content\Avisos\Comunicado 002-2025- Entregas Pessoais-imagens-1.jpg" />
     <Content Include="Content\Avisos\comunicado1 %28002%29.jpg" />
     <Content Include="Content\Avisos\Imagem1.png" />
+    <Content Include="Content\Avisos\JULHO.jpg" />
     <Content Include="Content\Avisos\Mãos para o futuro %28002%29.jpg" />
     <Content Include="Content\Banner\art-pictures-r1fa84ix5qhniulc.jpg" />
     <Content Include="Content\Banner\Baner SIPATE.jpg" />
